src/test/deca/context/invalid/homemade/tests/test26_nom_deja_pris/test26_nom_deja_pris1.deca
// test invalide de la règle 2.6


class A {
    void val(){}
    int val(){}
}